upgrade to  jdk17 ,and struts2 ,spring to latest version